[package]
name = "sevenz"
version = "0.1.0"
edition = "2021"
authors = ["casept <davids.paskevics@gmail.com>"]
description = "A crate for manipulating 7zip archives."

[dependencies]
nom = {version = "7", default-features = false, features = ["alloc"] }
bitvec = "1"
either = {version = "1", default-features = false}
crc = "3"
widestring = {version = "1", default-features = false, features = ["alloc"]}
# Upstream still hasn't merged bitvec 1.0 PR
nom-bitvec = {git = "https://github.com/CJKay/nom-bitvec", branch = "main"}
